; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_erp.c_zfcp_erp_wait.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_erp.c_zfcp_erp_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zfcp_adapter = type { i32, i32 }

@ZFCP_STATUS_ADAPTER_ERP_PENDING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfcp_erp_wait(%struct.zfcp_adapter* %0) #0 {
  %2 = alloca %struct.zfcp_adapter*, align 8
  store %struct.zfcp_adapter* %0, %struct.zfcp_adapter** %2, align 8
  %3 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %2, align 8
  %4 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %2, align 8
  %7 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %6, i32 0, i32 0
  %8 = call i32 @atomic_read(i32* %7)
  %9 = load i32, i32* @ZFCP_STATUS_ADAPTER_ERP_PENDING, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  %13 = zext i1 %12 to i32
  %14 = call i32 @wait_event(i32 %5, i32 %13)
  ret void
}

declare dso_local i32 @wait_event(i32, i32) #1

declare dso_local i32 @atomic_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
